<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/white_space"
        tools:context=".presentation.fragments.HomeFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platform"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_platform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_space"
            app:chipSpacingVertical="0dp"
            app:layout_constraintBottom_toTopOf="@id/bottom_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_platform"
            app:layout_constraintVertical_bias="0"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/platform_linkedin" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/platform_twitter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/platform_facebook" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/platform_instagram" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_threads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/platform_threads" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_purpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/white_space"
            android:text="@string/purpose"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cg_platform"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_space"
            android:background="@drawable/bg_input_text"
            android:gravity="start"
            android:hint="Donation camp for educating poor children on behalf of Children day"
            android:maxHeight="200dp"
            android:padding="@dimen/white_space"
            android:scrollbars="vertical"
            android:textColor="@color/grey100"
            android:textColorHint="@color/grey300"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_purpose"
            app:layout_constraintVertical_bias="0"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_formality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/white_space"
            android:text="@string/formality"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_purpose"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_formality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_formality"
            app:layout_constraintVertical_bias="0"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_casual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casual" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/neutral" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_formal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formal" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_tone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/white_space"
            android:text="@string/tone"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_formality"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_tone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_space"
            app:chipSpacingVertical="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_tone"
            app:layout_constraintVertical_bias="0"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_optimistic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/tone_optimistic" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_worried"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tone_worried" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_friendly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tone_friendly" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_curious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tone_curious" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_assertive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tone_assertive" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_encouraging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tone_encouraging" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_surprised"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tone_surprised" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_engaging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tone_engaging" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cooperative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tone_cooperative" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/white_space"
            android:text="@string/length"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_tone"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_length"
            app:layout_constraintVertical_bias="0"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_short"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/length_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_medium" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_long" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/white_space"
            android:text="@string/style"
            android:textColor="@color/white"
            android:textFontWeight="500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_length"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_space"
            app:chipSpacingVertical="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_style"
            app:layout_constraintVertical_bias="0"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/style_none" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_poetic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style_poetic" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_philosopher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style_philosopher" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_chef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style_chef" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_explorer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style_explorer" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_scientist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style_scientist" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_comedian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style_comedian" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_futurist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/style_futurist" />

        </com.google.android.material.chip.ChipGroup>

        <include
            android:id="@+id/bottom_bar"
            layout="@layout/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/white_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
